BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/Process_Deactivation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to disable various automated processes - validation rules, outbound messages, email alerts, workflows &amp; triggers
    
    Documentation on usage can be found here:
        https://makepositive.atlassian.net/wiki/spaces/DEV/pages/1193115680/Process+Deactivation
    
    </description>
    <label>Process Deactivation</label>
</CustomObject>