BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_All_Triggers__c.field-meta.xml
<fields>
    <fullName>Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all triggers (assumes triggers are implemented using our TriggerHandler framework)</description>
    <inlineHelpText>Disable all custom triggers (this excludes triggers provided by managed packages)</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</fields>