BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Benign_Field_Ignore__c.field-meta.xml
<CustomField>
    <fullName>Disable_Benign_Field_Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the check in the update triggers that means that benign field changes do not run the trigger functionality</description>
    <inlineHelpText>Disable the check in the update triggers that means that benign field changes do not run the trigger functionality</inlineHelpText>
    <label>Disable Benign Field Ignore</label>
    <type>Checkbox</type>
</CustomField>