BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Email_Alerts__c.field-meta.xml
<fields>
    <fullName>Disable_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable workflow email alerts (assumes workflow rules check this field)</description>
    <inlineHelpText>Disable workflow email alerts (workflow rules need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Email Alerts</label>
    <type>Checkbox</type>
</fields>