BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Outbound_Messages__c.field-meta.xml
<fields>
    <fullName>Disable_Outbound_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable workflow outbound messages (assumes workflow rules check this field)</description>
    <inlineHelpText>Disable workflow outbound messages (workflow rules need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Outbound Messages</label>
    <type>Checkbox</type>
</fields>