BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Processes__c.field-meta.xml
<fields>
    <fullName>Disable_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all process builders (assumes process builders check this field)</description>
    <inlineHelpText>Disable all process builders (process builders need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Processes</label>
    <type>Checkbox</type>
</fields>