BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Triggers__c.field-meta.xml
<fields>
    <fullName>Disable_Triggers__c</fullName>
    <description>Disable specified triggers (assumes triggers are implemented using our TriggerHandler framework). Trigger names should be comma separated.</description>
    <inlineHelpText>Disable specified custom triggers (this excludes triggers provided by managed packages). Trigger names should be comma separated.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>TextArea</type>
</fields>