BoilerPlateOrg/force-app/core/default/objects/Process_Deactivation__c/fields/Disable_Workflows__c.field-meta.xml
<fields>
    <fullName>Disable_Workflows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all other workflows (assumes workflow rules check this field)</description>
    <inlineHelpText>Disable all other workflows (workflow rules need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Workflows</label>
    <type>Checkbox</type>
</fields>